RESOLVED FIXED15181
text-transform: uppercase not working in input (submit, reset, button) elements
https://bugs.webkit.org/show_bug.cgi?id=15181
Summary text-transform: uppercase not working in input (submit, reset, button) elements
Theodore Lee
Reported 2007-09-11 12:34:46 PDT
Using the CSS attribute "text-transform: uppercase" in styling an input element (submit, reset, button) doesn't work. Works on Ff and IE.
Attachments
Use RenderTextFragment for buttons' inner text (39.54 KB, patch)
2007-09-12 01:07 PDT, mitz
darin: review+
Mark Rowe (bdash)
Comment 1 2007-09-11 12:47:14 PDT
Confirmed in TOT. It works correctly in the text field and text area.
Mark Rowe (bdash)
Comment 2 2007-09-11 12:48:12 PDT
mitz
Comment 3 2007-09-12 01:07:34 PDT
Created attachment 16262 [details] Use RenderTextFragment for buttons' inner text No layout test regressions.
mitz
Comment 4 2007-09-12 01:13:00 PDT
Filed bug 15187 on the same problem with <select>s.
Darin Adler
Comment 5 2007-09-12 13:09:30 PDT
Comment on attachment 16262 [details] Use RenderTextFragment for buttons' inner text r=me
Mark Rowe (bdash)
Comment 6 2007-10-14 04:54:04 PDT
Landed in r26587.
Note You need to log in before you can comment on or make changes to this bug.