third_party/WebKit/WebCore/rendering/RenderButton.cpp
@@ -28,7 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "GraphicsContext.h"
 #include "HTMLInputElement.h"
 #include "HTMLNames.h"
-#include "RenderText.h"
+#include "RenderTextFragment.h"
 
 namespace WebCore {
 
@@ -102,7 +102,7 @@ void RenderButton::setText(const String& str)
         if (m_buttonText)
             m_buttonText->setText(str.impl());
         else {
-            m_buttonText = new (renderArena()) RenderText(document(), str.impl());
+            m_buttonText = new (renderArena()) RenderTextFragment(document(), str.impl());
             m_buttonText->setStyle(style());
             addChild(m_buttonText);
         }
