third_party/WebKit/WebCore/rendering/RenderButton.h
@@ -28,6 +28,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+class RenderTextFragment;
+
 // RenderButtons are just like normal flexboxes except that they will generate an anonymous block child.
 // For inputs, they will also generate an anonymous RenderText and keep its style and content up
 // to date as the button changes.
@@ -57,7 +59,7 @@ public:
 protected:
     virtual bool hasLineIfEmpty() const { return true; }
 
-    RenderText* m_buttonText;
+    RenderTextFragment* m_buttonText;
     RenderBlock* m_inner;
 };
 
